# kurpod

./: .gitignore  API_ENDPOINTS_IMPLEMENTATION.md  BUILD_SYSTEM_UPDATES.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.chef  FRONTEND_UI_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEDIA_VIDEO_IMPLEMENTATION.md  README.md  README.txt  SECURITY.md  SESSION_AUTH_IMPLEMENTATION.md  UI_COMPONENTS_ADDENDUM.md  build-all.sh  build.rs  build.sh  build_ios.sh  build_tauri.sh  deploy_ios.sh  docker-compose.yml  fix-navigation.md  nginx.conf  package-lock.json  run.sh  run_ios.sh  rustfmt.toml  test_tauri.sh
.githooks/: pre-commit
.github/: SECRETS.md  entitlements.plist
.github/workflows/: auto-version.yml  build.yml  ci.yml  docker-build.yml  docker-test.yml  release-simple.yml  release.yml  update-homebrew.yml
Formula/: kurpod.rb
docs/: ARCHITECTURE.md  CONTRIBUTING.md  HOMEBREW.md  STEGANOGRAPHY.md  USER_MANUAL.md
docs/src/app/: layout.tsx  page.md
docs/src/app/docs/backup-strategies/: page.md
docs/src/app/docs/docker-deployment/: page.md
docs/src/app/docs/encryption-overview/: page.md
docs/src/app/docs/file-operations/: page.md
docs/src/app/docs/installation/: page.md
docs/src/app/docs/key-features/: page.md
docs/src/app/docs/managing-volumes/: page.md
docs/src/app/docs/plausible-deniability/: page.md
docs/src/app/docs/quick-start/: page.md
docs/src/app/docs/rest-api/: page.md
docs/src/app/docs/reverse-proxy/: page.md
docs/src/app/docs/security-best-practices/: page.md
docs/src/app/docs/security-model/: page.md
docs/src/app/docs/server-configuration/: page.md
docs/src/app/docs/systemd-service/: page.md
docs/src/app/docs/volume-management/: page.md
docs/src/app/docs/web-interface/: page.md
docs/src/app/docs/what-is-kurpod/: page.md
docs/src/components/: Callout.tsx  Hero.tsx  Layout.tsx  Logo.tsx
docs/src/lib/: navigation.ts
enc_server/: Cargo.toml
enc_server/src/: main.rs  state.rs
enc_tauri/: Cargo.toml  bun.lockb  index.html  package.json  tsconfig.json  vite.config.js
enc_tauri/public/: pdf.worker.min.js
enc_tauri/src/: App.css  App.jsx  hero.ts  main.jsx  main.rs
enc_tauri/src-tauri/: Cargo.toml  tauri.conf.json
enc_tauri/src-tauri/capabilities/: default.json
enc_tauri/src-tauri/src/: lib.rs
enc_tauri/src/components/: DecoyScreen.jsx  InitScreen.jsx  ReadyScreen.jsx  UnlockScreen.jsx
encryption_core/: Cargo.toml
encryption_core/examples/: png_stego_demo.rs
encryption_core/src/: blob.rs  lib.rs  steganography.rs
encryption_core/src/steganography/: jpeg_comment.rs  mp4_free_box.rs  pdf_eof.rs  png_chunk.rs
encryption_core/tests/: jpeg_steganography.rs  mp4_steganography.rs  pdf_steganography.rs  png_steganography.rs
frontend/: bun.lockb  dev.sh  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: BlobSelector.jsx  Breadcrumb.jsx  BreadcrumbNavigation.jsx  Button.jsx  Card.jsx  CreateBlobModal.jsx  DropdownMenu.jsx  FileExplorer.jsx  FileGrid.jsx  FilePreviewModal.jsx  FileTypeIcon.jsx  FileViewer.jsx  Input.jsx  LoadingSpinner.jsx  MobileBreadcrumb.jsx  MobileNav.jsx  MobileSidebar.jsx  Skeleton.jsx  ThemeProvider.jsx  ThemeToggle.jsx  Toast.jsx  UploadManager.jsx  VideoPlayer.jsx  VideoThumbnail.jsx
frontend/src/components/ui/: card.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/services/: api.js
frontend/src/utils/: fileTypes.js
hassio-addon/: repository.yaml
hassio-addon/kurpod/: CHANGELOG.md  Dockerfile  README.md  config.yaml  run.sh
kurpod-apps/: build_ios.sh  deploy_ios.sh  package.json  tailwind.config.js  vite.config.js
kurpod-apps/src/: App.css  App.jsx  index.css  main.jsx
kurpod-apps/src-tauri/: build.rs  tauri.conf.json
kurpod-apps/src-tauri/icons/: icon.icns
kurpod-apps/src-tauri/src/: ios_file_access.rs  lib.rs
kurpod-apps/src/components/: DecoyScreen.jsx  GlobalMessages.jsx  ReadyScreen.jsx  theme-provider.tsx
kurpod-apps/src/components/ui/: button.tsx
kurpod-apps/src/hooks/: useIOSFileAccess.ts
kurpod-apps/src/services/: iOSFileManager.ts
kurpod-main/: .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  SECURITY.md  build-docker.sh  build-multiarch.sh  build.sh  docker-compose.yml  package-lock.json  run.sh  test_tauri.sh
kurpod-main/.github/workflows/: auto-version.yml  build.yml  ci.yml  release-simple.yml  release.yml
kurpod-main/docs/: USER_MANUAL.md
kurpod-main/encryption_core/: Cargo.toml
kurpod-main/encryption_core/src/: blob.rs
kurpod-main/encryption_core/tests/: deletion.rs
kurpod-main/frontend/: eslint.config.js  package-lock.json  tailwind.config.js
kurpod-main/frontend/src/: main.jsx
kurpod-main/frontend/src/components/: Card.jsx  LoadingSpinner.jsx  MediaPlayer.jsx  ThemeProvider.jsx  ThemeToggle.jsx
kurpod-main/kurpod_server/: Cargo.toml
kurpod-main/kurpod_server/src/: main.rs  state.rs
kurpod-main/marketing-docs/: MARKETING-COPY.md  MONETIZATION-STRATEGY.md  README-GITHUB.md  SELF-HOSTING-GUIDE.md
kurpod_server/: Cargo.toml
kurpod_server/src/: auth.rs  main.rs  session.rs  state.rs
landing/src/app/: page.tsx
landing/src/app/pricing/: page.tsx
landing/src/components/: testimonials.tsx
scripts/: update-homebrew-formula.sh
src/: App.jsx  blob.rs  lib.rs  main.rs  state.rs
src/components/: InitScreen.jsx  UnlockScreen.jsx
