[package]
name = "enc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
# tokio-util not directly used in the code
# tokio-util = "0.7"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10.1", features = ["reduced-round"] }
# xchachapoly = { version = "0.5", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["fs"] }
tower = { version = "0.4", features = ["util"] }
rand = "0.8"
rand_core = "0.9.3"
anyhow = "1.0"
# tar not used in the code
# tar = "0.4"
# bytes not directly used in the code
# bytes = "1.1"
# base64 not used in the code
# base64 = "0.21"
mime_guess = "2.0"
# hyper not directly used (pulled in by axum)
# hyper = { version = "1", features = ["full"] }
# multer not used in the code
# multer = "2"
local-ip-address = "0.6"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
# rayon not used in the code
# rayon = "1.8"
bincode = "1.3"

[build-dependencies]

[profile.release]
# Speed optimizations
opt-level = 3            # Maximum optimization level
codegen-units = 1        # Compile crate as single unit for better optimization
lto = "fat"              # Full link-time optimization across crates
panic = "abort"          # Remove panic unwinding code
incremental = false      # Disable incremental compilation

# Size optimizations (secondary priority)
strip = true             # Strip symbols from binary
overflow-checks = false  # Disable integer overflow checks

[profile.dev]
# Fast compilation settings for development
opt-level = 0            # Minimal optimization for faster compilation
debug = true             # Include debug info
codegen-units = 256      # Many compilation units for parallel builds
lto = false              # No link-time optimization
incremental = true       # Enable incremental compilation for faster rebuilds
