[workspace]
members = [
    "encryption_core",
    "enc_server"
]
exclude = [
    "enc_tauri/src-tauri"
]
resolver = "3"

# The workspace doesn't have its own dependencies
[workspace.package]
edition = "2021"
version = "0.1.2"
authors = ["ENC Server Team"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/yourusername/enc-server"
repository = "https://github.com/yourusername/enc-server"
description = "Encrypted file storage server with web interface"
keywords = ["encryption", "storage", "server", "security"]
categories = ["cryptography", "web-programming", "command-line-utilities"]

# Shared dependencies for all workspace members
[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.8"
rand_core = "0.9.3"
anyhow = "1.0.95"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
bincode = "1.3.3"
mime_guess = "2.0.5"
log = "0.4.22"

[profile.release]
# Speed optimizations
opt-level = 3            # Maximum optimization level
codegen-units = 1        # Compile crate as single unit for better optimization
lto = "fat"              # Full link-time optimization across crates
panic = "abort"          # Remove panic unwinding code
incremental = false      # Disable incremental compilation

# Size optimizations (secondary priority)
strip = true             # Strip symbols from binary
overflow-checks = false  # Disable integer overflow checks

[profile.dev]
# Fast compilation settings for development
opt-level = 0            # Minimal optimization for faster compilation
debug = true             # Include debug info
codegen-units = 256      # Many compilation units for parallel builds
lto = false              # No link-time optimization
incremental = true       # Enable incremental compilation for faster rebuilds
