[workspace]
members = [
    "encryption_core",
    "kurpod_server"
]
exclude = [
    "enc_tauri/src-tauri"
]
resolver = "2"

# The workspace doesn't have its own dependencies
[workspace.package]
edition = "2021"
version = "0.1.4"
authors = ["Sarav"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/srv1n/kurpod"
repository = "https://github.com/srv1n/kurpod"
description = "Encrypted file storage server with web interface"
keywords = ["encryption", "storage", "server", "security"]
categories = ["cryptography", "web-programming", "command-line-utilities"]

# Shared dependencies for all workspace members
[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.8"
rand_core = "0.9.3"
anyhow = "1.0.95"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
bincode = "1.3.3"
mime_guess = "2.0.5"
log = "0.4.22"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package.kurpod_server]
opt-level = "z"  # Optimize for size

# Development profile with optimizations
[profile.dev]
opt-level = 1
debug = true

[profile.dev.package."*"]
opt-level = 3  # Optimize dependencies even in dev
