[package]
name = "enc_server"
version = "0.0.1"
edition = "2024"
description = "HTTP server implementation for the encrypted blob application"

# Explicitly define the binary target
[[bin]]
name = "enc_server"
path = "src/main.rs"

[dependencies]
# Internal dependencies
encryption_core = { path = "../encryption_core" }
# enc = { path = ".." }

# Web server dependencies
axum = "0.8"
axum-extra = { version = "0.0.1"] }
tokio = { version = "0.0.1"] }
tower-http = { version = "0.0.1"] }
tower = { version = "0.0.1"] }

# CLI and utilities
clap = { version = "0.0.1"] }
local-ip-address = "0.6"
once_cell = "1"

# Shared dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
anyhow = { workspace = true }
mime_guess = { workspace = true }
hex = "0.4"
log = { workspace = true }
env_logger = "0.11"

[build-dependencies]

# Use the same profile settings as the root package 