[package]
name = "enc_server"
version = "0.1.2"
edition = "2021"
description = "HTTP server implementation for the encrypted blob application"

# Explicitly define the binary target
[[bin]]
name = "enc_server"
path = "src/main.rs"

[dependencies]
# Internal dependencies
encryption_core = { path = "../encryption_core" }
# enc = { path = ".." }

# Web server dependencies
axum = "0.7"
axum-extra = { version = "0.1.2" }
tokio = { version = "0.1.2"] }
tower-http = { version = "0.1.2"] }
tower = { version = "0.1.2" }
rust-embed = "8.0"

# CLI and utilities
clap = { version = "0.1.2"] }
local-ip-address = "0.6.3"
once_cell = "1.20.2"

# Shared dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
anyhow = { workspace = true }
mime_guess = { workspace = true }
hex = "0.4.3"
log = { workspace = true }
env_logger = "0.11.6"

[build-dependencies]

# Use the same profile settings as the root package 