[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

# iOS-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
tokio = { version = "1.0", features = ["sync", "rt", "macros"] }
once_cell = "1.19"
libc = "0.2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
encryption_core = { path = "../../encryption_core" }
mime_guess = "2.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
rand = "0.8"
hex = "0.4"
urlencoding = "2.1"

[features]
